# template-project

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
data/: README.md  sample.txt
notebooks/: 01_pathlib_example.ipynb
pipelines/: azure-pipelines-ci.yml
