[project]
name = "project-name"
version = "0.1.0"
description = "CBRE project — clone from template"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
    "ipykernel>=6.29.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "S", "T20", "RUF"]
ignore = ["E501", "S101", "B008"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"notebooks/**" = ["E402", "T201"]
"scripts/**" = ["T201"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
